# flark

./: .gitignore  .pubignore  CHANGELOG.md  README.md  analysis_options.yaml  dart_test.yaml  pubspec.yaml
.github/workflows/: ci.yml  pages.yml
benchmark/peer/: README.md  pubspec.yaml
benchmark/peer_supereditor/: pubspec.yaml
doc/: README.md  api_surface.md  cookbook.md  development.md  getting_started.md  parser_and_platforms.md
doc/architecture/: live_edit_intent_pipeline.md
docs/: README.md  api_surface.md  benchmarks.md  cookbook.md  development.md  getting_started.md  parser_and_platforms.md
docs/architecture/: live_rendered_rebuild_isolation.md
docs/production_readiness/: api_migration_2026-05-01.md  audit_2026-05-01.md  execution_log.md  execution_plan.md  native_packaging_2026-05-01.md  public_api_inventory_2026-05-01.md  (+2 more)
example/: README.md  pubspec.yaml
hook/: build.dart
lib/: flark.dart  flark_advanced.dart  flark_core.dart  sovereign_editor.dart  sovereign_editor_core.dart  sovereign_editor_v2.dart
native/comrak_bridge/: Cargo.toml  README.md  flark_comrak_bridge.h  sovereign_comrak_bridge.h
native/comrak_bridge/src/: abi.rs  lib.rs  marker_mapping.rs  parser.rs  payload.rs  source_ranges.rs
scripts/: build_comrak_all.sh  build_comrak_android.sh  build_comrak_ios.sh  build_comrak_wasm.sh  verify_benchmark_lane.sh  verify_example_packaging.sh  verify_live_rendered_profile.sh  verify_native_editor_ci.sh  verify_package_confidence.sh  verify_release.sh  verify_web_adapter_ci.sh
tool/: verify_web_playground_cdp.dart
(+631 files in other folders)
