[package]
name = "flark_comrak_bridge"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# default-features = false drops comrak's `syntect` highlighting plugin (and its
# oniguruma C dependency, onig_sys). Flark does its own highlighting via the Dart
# `highlight` package and only uses comrak's core parse API, so syntect is pure
# overhead — and its C build broke macOS x86_64 cross-compilation.
comrak = { version = "0.50", default-features = false }
entities = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
